[package]
name = "template-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["sync"] }

[dev-dependencies]
anyhow = "1.0.86"
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "io-util"] }
tracing-subscriber = "0.3.18"
