[package]
name = "template-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"

[dev-dependencies]
tokio-util = { version = "0.7.11", features = ["codec"] }
anyhow = "1.0.86"
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "io-util"] }
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
futures = "0.3.30"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
nanoid = "0.4.0"
serde = "1.0.204"
thiserror = "1.0.61"
